[gd_scene load_steps=14 format=3 uid="uid://b6gem3jw1eo62"]

[ext_resource type="Script" uid="uid://c5bni58bhmjlo" path="res://ui/hud/hud.gd" id="1_rbyyf"]
[ext_resource type="AudioStream" uid="uid://ciox2nivp1thi" path="res://assets/sounds/relief.mp3" id="2_5uuaq"]
[ext_resource type="PackedScene" uid="uid://bipon0wb0ovjw" path="res://ui/healthbar/healthbar.tscn" id="2_276te"]
[ext_resource type="Theme" uid="uid://cqw1qi00p254h" path="res://ui_theme.tres" id="2_546lt"]
[ext_resource type="Script" uid="uid://c66o6dhkgnilh" path="res://ui/rumbar/rumbar.gd" id="4_7ihmi"]
[ext_resource type="Texture2D" uid="uid://bfrglsfnigh7b" path="res://assets/bottle of rum - small new.png" id="5_gfles"]
[ext_resource type="Script" uid="uid://b41rrrx8uh1gg" path="res://ui/hud/ammo_display.gd" id="6_aixkq"]
[ext_resource type="FontFile" uid="uid://b33ox0oj78and" path="res://assets/fonts/Minecraft.ttf" id="6_kwc50"]
[ext_resource type="Texture2D" uid="uid://cdrr45b5lyr28" path="res://assets/pistol.png" id="7_cxhb7"]
[ext_resource type="Texture2D" uid="uid://bapmkrdiwi5gg" path="res://assets/jolly roger.png" id="9_aixkq"]
[ext_resource type="Texture2D" uid="uid://d3fuixhfdipu3" path="res://assets/bottle of rum.png" id="10_cxhb7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_272bh"]

[sub_resource type="Theme" id="Theme_o2lis"]
Label/colors/font_color = Color(1, 1, 1, 1)
Label/colors/font_outline_color = Color(0, 0, 0, 1)
Label/colors/font_shadow_color = Color(0, 0, 0, 0)
Label/constants/line_spacing = 3
Label/constants/outline_size = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/constants/shadow_outline_size = 1
Label/font_sizes/font_size = 16
Label/fonts/font = ExtResource("6_kwc50")
Label/styles/normal = SubResource("StyleBoxEmpty_272bh")

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_rbyyf")
heal_sound = ExtResource("2_5uuaq")

[node name="Message" type="Label" parent="."]
anchors_preset = -1
anchor_top = 0.834
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 2.75998
offset_right = -1.0
offset_bottom = -3.0
horizontal_alignment = 1
vertical_alignment = 2

[node name="Healthbar" parent="." instance=ExtResource("2_276te")]
offset_left = 18.0
offset_top = 13.0
offset_right = 152.0
offset_bottom = 20.0
size_flags_horizontal = 0

[node name="Rumbar" type="HBoxContainer" parent="."]
layout_direction = 2
offset_left = 21.0
offset_top = 32.0
offset_right = 34.0
offset_bottom = 48.0
size_flags_horizontal = 0
script = ExtResource("4_7ihmi")

[node name="Panel" type="Panel" parent="Rumbar"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="Rumbar/Panel"]
texture_filter = 1
position = Vector2(3, 0)
texture = ExtResource("5_gfles")

[node name="Label" type="Label" parent="Rumbar"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_546lt")
text = "0"
horizontal_alignment = 2

[node name="AmmoDisplay" type="HBoxContainer" parent="."]
layout_direction = 2
offset_left = 45.0
offset_top = 32.0
offset_right = 58.0
offset_bottom = 48.0
size_flags_horizontal = 0
script = ExtResource("6_aixkq")

[node name="Panel" type="Panel" parent="AmmoDisplay"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="AmmoDisplay/Panel"]
texture_filter = 1
position = Vector2(3, 0)
texture = ExtResource("7_cxhb7")

[node name="Label" type="Label" parent="AmmoDisplay"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_546lt")
text = "0"
horizontal_alignment = 2

[node name="MoneyDisplay" type="Label" parent="."]
texture_filter = 1
offset_left = 63.0
offset_top = 28.0
offset_right = 151.0
offset_bottom = 60.0
theme = SubResource("Theme_o2lis")
theme_override_colors/font_color = Color(1, 0.966667, 0, 1)
text = "$0"
horizontal_alignment = 2

[node name="GameOverContainer" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_top = 0.44400004
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 272.5
offset_top = 0.1599884
offset_right = -272.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Game Over Label" type="Label" parent="GameOverContainer"]
texture_filter = 1
layout_mode = 2
theme = ExtResource("2_546lt")
text = "YARR DEAD"
horizontal_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="GameOverContainer"]
texture_filter = 1
position = Vector2(47.5, -30)
texture = ExtResource("9_aixkq")

[node name="HealContainer" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_top = 0.44400004
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 272.5
offset_top = 0.1599884
offset_right = -272.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="HealContainer"]
texture_filter = 1
layout_mode = 2
theme = ExtResource("2_546lt")
text = "RUM RESTORED"
horizontal_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="HealContainer"]
texture_filter = 1
position = Vector2(71.5, -30)
texture = ExtResource("10_cxhb7")

[node name="Timer" type="Timer" parent="HealContainer"]
wait_time = 2.0
one_shot = true
